--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8"/>
   </head>
   <body>
-    <video controls>
-	<source src="stream.mpd">
-	</video>
+    <video controls></video>
     <script>
       var video = document.querySelector('video');
 
@@ -87,10 +85,10 @@
           mediaSource.endOfStream();
           video.removeEventListener('timeupdate', checkBuffer);
         } else if(!requestedSegments[currentSegment]){
-			if(currentSegment - getCurrentSegment() < 6){
+			//if(currentSegment - getCurrentSegment() < 6){
 				fetchRange(assetURL, bytesFetched, bytesFetched + segmentLength, appendSegment);
 				requestedSegments[currentSegment] = true;
-			}
+			//}
 		  }
 		//else if (shouldFetchNextSegment(currentSegment)) {
         // requestedSegments[currentSegment] = true;
