--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       var segmentDuration = 0;
       var bytesFetched = 0;
       var requestedSegments = [];
-	  var currentSegment = 0;
+	var currentSegment = 0;
 
       for (var i = 0; i < totalSegments; ++i) requestedSegments[i] = false;
 
@@ -66,7 +66,7 @@
         xhr.setRequestHeader('Range', 'bytes=' + start + '-' + end);
         xhr.onload = function () {
 		//var state = [['fetched bytes:', start + '-' + end], ['current segment:', getCurrentSegment()], ['current segment buffered:', currentSegment + 1]];
-		//bytesFetched += end - start + 1;
+		bytesFetched += end - start + 1;
 		cb(xhr.response);
 		currentSegment++;
 		//console.table(state);
